<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.ggeorgovassilis</groupId>
	<artifactId>sst</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<description>Super Star Trek</description>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gwt.version>2.10.0</gwt.version>
		<skip.tests>false</skip.tests>
		<skip.deploy>true</skip.deploy>
		<skip.gwt>false</skip.gwt>
		<skip.ant-copy>false</skip.ant-copy>
		<pushToGit>false</pushToGit>
		<gwt.disableClassMetadata>false</gwt.disableClassMetadata>
		<gwt.disableCastChecking>false</gwt.disableCastChecking>
		<gwt.optimizationLevel>-1</gwt.optimizationLevel>
		<gwt-maven-plugin.version>2.10.0</gwt-maven-plugin.version>
		<gwt.methodNameDisplayMode></gwt.methodNameDisplayMode> <!-- use "full"
		for diagnostings -->
		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/ggeorgovassilis/superstartrek/</connection>
		<developerConnection>
			scm:git:https://github.com/ggeorgovassilis/superstartrek/</developerConnection>
		<url>https://github.com/ggeorgovassilis/superstartrek/</url>
	</scm>

	<repositories>
		<repository>
			<id>gwt-sl-mvn-repo</id>
			<url>
				https://raw.github.com/ggeorgovassilis/gwt-htmlresource/mvn-repo/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>refresh-resources</id>
			<properties>
				<skip.tests>true</skip.tests>
				<skip.deploy>true</skip.deploy>
				<skip.gwt>true</skip.gwt>
				<skip.ant-copy>true</skip.ant-copy>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.8</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<copy
											todir="${project.build.directory}/sst/superstartrek.superstartrek">
											<fileset
												dir="${project.basedir}/src/main/java/superstartrek/public" />
										</copy>
									</tasks>
									<skip>false</skip>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>production</id>
			<properties>
				<gwt.draftCompile>false</gwt.draftCompile>
				<gwt.module>superstartrek.sst-prod</gwt.module>
				<gwt.methodNameDisplayMode>NONE</gwt.methodNameDisplayMode>
				<gwt.saveSource>false</gwt.saveSource>
				<gwt.style>OBFUSCATED</gwt.style>
				<skip.deploy>false</skip.deploy>
				<pushToGit>true</pushToGit>
				<gwt.disableClassMetadata>true</gwt.disableClassMetadata>
				<gwt.disableCastChecking>true</gwt.disableCastChecking>
				<gwt.optimizationLevel>9</gwt.optimizationLevel>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-scm-plugin</artifactId>
						<version>1.11.2</version>
						<configuration>
							<connectionType>connection</connectionType>
							<basedir>${project.basedir}</basedir>
							<skip>${skip.deploy}</skip>
							<scmVersion>gh-pages</scmVersion>
							<scmVersionType>branch</scmVersionType>
							<username>g.georgovassilis@gmail.com</username>
							<password>${sst.git.password}</password>
						</configuration>

						<executions>
							<execution>
								<id>add-files</id>
								<phase>install</phase>
								<goals>
									<goal>add</goal>
								</goals>
								<configuration>
									<includes>/site/**</includes>
									<workItem>auto deploy</workItem>
									<pushChanges>${pushToGit}</pushChanges>
								</configuration>
							</execution>
							<execution>
								<id>push-files</id>
								<phase>install</phase>
								<goals>
									<goal>checkin</goal>
								</goals>
								<configuration>
									<includes>/site/**</includes>
									<pushChanges>false</pushChanges>
									<message>Commiting new deployment</message>
								</configuration>
							</execution>
							<execution>
								<id>update-repo</id>
								<phase>install</phase>
								<goals>
									<goal>update</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.georgovassilis</groupId>
			<artifactId>gwt-htmlresource</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20200518</version>
			<scope>test</scope>
		</dependency>


	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${project.build.directory}</directory>
							<includes>
								<include>**/*</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
						<fileset>
							<directory>${project.basedir}/site</directory>
							<includes>
								<include>**/*</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<skip>${skip.tests}</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<compileReport>true</compileReport>
					<deploy>${project.build.directory}/deploy</deploy>
					<disableClassMetadata>${gwt.disableClassMetadata}</disableClassMetadata>
					<disableCastChecking>${gwt.disableCastChecking}</disableCastChecking>
					<draftCompile>${gwt.draftCompile}</draftCompile>
					<methodNameDisplayMode>${gwt.methodNameDisplayMode}</methodNameDisplayMode>
					<module>${gwt.module}</module>
					<optimizationLevel>${gwt.optimizationLevel}</optimizationLevel>
					<outputDirectory>${project.basedir}/site</outputDirectory>
					<persistentunitcache>false</persistentunitcache>
					<removeDuplicateFunctions>true</removeDuplicateFunctions>
					<saveSource>${gwt.saveSource}</saveSource>
					<style>${gwt.style}</style>
					<skip>${skip.gwt}</skip>
					<strict>true</strict>
					<detailedSoyc>true</detailedSoyc>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<move todir="${project.basedir}/site">
									<fileset
										dir="${project.basedir}/site/superstartrek.superstartrek" />
								</move>
								<replace token="__APPBUILDNR"
									value="${maven.build.timestamp}"
									dir="${project.basedir}/site">
									<include name="index.html" />
								</replace>
								<echo file="${project.basedir}/site/package.txt"
									append="false">${maven.build.timestamp}</echo>
							</tasks>
							<skip>${skip.ant-copy}</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
